--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="ping.css">
 </head>
 
-<body>
+<body class="gradient10 ">
     <nav>
         <ul>
             <li>
